k8s/infra/base/network/policies/infra/database-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: database-access
  namespace: database
spec:
  description: 'Policy controlling database access patterns'
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: database
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: app.kubernetes.io/name
              operator: In
              values: ['authelia', 'argocd', 'prometheus']
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
            - port: '6379'
              protocol: TCP
          rules:
            http:
              - {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP
          rules:
            http:
              - method: 'GET'
                path: '/metrics'
